--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,35 @@
     "source.fixAll": "explicit",
     "source.organizeImports": "explicit",
     "source.sortMembers": "explicit"
-  }
+  },
+  "cSpell.words": [
+    "algiz",
+    "ansuz",
+    "bakgrund",
+    "berkanan",
+    "Cinzel",
+    "dagaz",
+    "ehwaz",
+    "eihwaz",
+    "fehu",
+    "gebo",
+    "Guldaktig",
+    "hagalaz",
+    "ingwaz",
+    "jera",
+    "kaunan",
+    "lagu",
+    "mannaz",
+    "mörkblå",
+    "Mystisk",
+    "naudhiz",
+    "othala",
+    "perthro",
+    "raido",
+    "sowilo",
+    "thurisaz",
+    "tiwaz",
+    "uruz",
+    "wunjo"
+  ]
 }
