--- a/app.json
+++ b/app.json
@@ -20,11 +20,10 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "standalone",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
       [
         "expo-splash-screen",
         {
@@ -33,7 +32,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
