--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,15 @@
   "cSpell.words": [
     "algiz",
     "ansuz",
+    "även",
     "bakgrund",
+    "bättre",
     "berkanan",
     "Cinzel",
     "dagaz",
     "ehwaz",
     "eihwaz",
+    "färg",
     "fehu",
     "gebo",
     "Guldaktig",
@@ -20,8 +23,12 @@
     "ingwaz",
     "jera",
     "kaunan",
+    "kontrast",
     "lagu",
+    "ljus",
+    "Ljusare",
     "mannaz",
+    "mörk",
     "mörkblå",
     "Mystisk",
     "naudhiz",
@@ -29,9 +36,11 @@
     "perthro",
     "raido",
     "sowilo",
+    "texten",
     "thurisaz",
     "tiwaz",
     "uruz",
+    "Valfritt",
     "wunjo"
   ]
 }
