feat(i18n): Implement localization support with English and Swedish translations
- Added i18n.js for internationalization handling using expo-localization and i18n-js.
- Created translation files for English (en.json) and Swedish (sv.json) with relevant keys.
- Updated RuneDetailScreen to display meanings and interpretations based on the current locale.
- Enhanced SearchScreen with language selection buttons and translated text.
- Added new dependencies: expo-localization and i18n-js.
- Updated package.json to include new dependencies and removed duplicates.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,22 +5,32 @@
     "source.sortMembers": "explicit"
   },
   "cSpell.words": [
+    "aktuella",
     "algiz",
+    "andligt",
+    "ändras",
     "ansuz",
+    "antingen",
+    "Använd",
     "även",
     "bakgrund",
     "bättre",
     "berkanan",
+    "betydelse",
     "Cinzel",
     "dagaz",
     "ehwaz",
     "eihwaz",
     "färg",
     "fehu",
+    "från",
     "gebo",
     "Guldaktig",
     "hagalaz",
+    "Hämta",
+    "Importera",
     "ingwaz",
+    "instans",
     "jera",
     "kaunan",
     "kontrast",
@@ -33,10 +43,14 @@
     "Mystisk",
     "naudhiz",
     "othala",
+    "översättningen",
     "perthro",
     "raido",
+    "rätt",
     "searchrunesapp",
     "sowilo",
+    "språket",
+    "språkkoden",
     "texten",
     "thurisaz",
     "tiwaz",
